feat: Added tests for the bio and interest update endpoing
